--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "googleapis": "^39.2.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.7.1",
     "mongoose-unique-validator": "^2.0.3"
   },
