--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,7 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.2",
-    "reactjs-popup": "^1.5.0"
+    "react-scripts": "3.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
