--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.14",
-    "react-datetime": "^3.0.0-beta.4",
+    "react-datetime-picker": "^2.7.1",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.2"
   },
