--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-calendar": "^2.19.2",
     "react-datetime-picker": "^2.7.1",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.2"
