--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "watch": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-postbuild": "cd ../frontend && npm install && npm build"
+    "heroku-postbuild": "cd ../frontend && npm install && npm run build"
   },
   "author": "Robert Pakkanen",
   "license": "ISC",
