--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "nodemon index.js",
+    "watch": "nodemon server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "cd ../frontend && npm install && npm run build"
   },
