build script fix

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "watch": "nodemon server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cd ../frontend && npm install && npm run build"
+    "build": "cd ui && npm install && npm run build"
   },
   "author": "Robert Pakkanen",
   "license": "ISC",
