--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server/index.js",
-    "watch": "nodemon server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "cross-env NODE_ENV=production node server/index.js",
+    "watch": "cross-env NODE_ENV=development nodemon server/index.js",
+    "test": "cross-env NODE_TEST=test jest --verbose",
     "build": "cd ui && npm install && npm run build"
   },
   "author": "Robert Pakkanen",
@@ -23,6 +23,11 @@
     "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
+    "cross-env": "^6.0.3",
+    "jest": "^24.9.0",
     "nodemon": "^1.19.2"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
