--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node server/index.js",
+    "start": "node server/index.js",
     "watch": "cross-env NODE_ENV=development nodemon server/index.js",
     "test": "cross-env NODE_TEST=test jest --verbose",
     "build": "cd ui && npm install && npm run build"
