--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "google-auth-library": "^5.9.1",
     "googleapis": "^39.2.0",
     "moment": "^2.24.0",
     "mongoose": "^5.7.7",
@@ -25,6 +26,15 @@
   },
   "devDependencies": {
     "cross-env": "^6.0.3",
-    "nodemon": "^1.19.2"
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "nodemon": "^1.19.2",
+    "prettier": "^1.19.1"
   }
 }
